--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 Team WhiteSky
 Foxycle
 
+Team Pizza: Pineapple
+
 Ishaan Jain - Team Lead
 Evan Zhang - Architect
 Abhijeet Sidhu - DB Lead
 Garrett Wayne - UI Lead
-
+Donovan - QA Testing
